--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "map2dbg/cv2pdb"]
 	path = map2dbg/cv2pdb
-	url = https://githubfast.com/rainers/cv2pdb.git
+	url = https://github.com/rainers/cv2pdb.git
